--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,109 @@
 * {
     margin: 0.5em;
-    border: 1px, dotted, blue;
+    /*border: 1px, dotted, blue;*/
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#allContentWrapper {
+    padding: 0px 50px;
+}
+
+#inputForm {
+    /*border: 1px solid #a94442;*/
+    border-radius: 1px;
+    padding: 10px;
+}
+
+#newDeckWrapper {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+
+#btnNewDeck {
+    background-color: #a1e5a2;
+}
+
+#btnNewDeck:hover {
+    background-color: #9ad29b;
+}
+
+#btnShuffleDeck {
+    background-color: rgb(219, 219, 156);
+}
+
+#btnShuffleDeck:hover {
+    background-color: rgb(201, 201, 145);
+}
+
+#btnShowDeck {
+    background-color: rgb(188, 216, 242);
+}
+
+#btnShowDeck:hover {
+    background-color: rgb(169, 196, 222);
+}
+
+#btnDrawCard {
+    background-color: #d9c1e5;
+}
+
+#btnDrawCard:hover {
+    background-color: #cab3d6;
+}
+
+button {
+    border: 0.5px solid rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    margin: 5px 10px;
+    border-radius: 5px;
+    color: #333;
+    box-shadow: 1.5px 1.5px 2px rgba(0, 0, 0, 0.5);
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+button:active {
+    transform: translate(0.5px, 1px);
+}
+
+#messageBox {
+    border: 1px solid #ccc;
+    padding: 9px;
+    margin: 5px 0;
+    border-radius: 5px;
+    color: #333;
+    display: none;
+    white-space: nowrap;
+    align-content: center;
+}
+
+#messageBox.success {
+    border-color: #4dab50;
+    background-color: #dff0d8;
+    color: #376a38;
+}
+
+#messageBox.error {
+    border-color: #f44336;
+    background-color: #fddddd;
+    color: #a94442;
+}
+
+.hidden {
+    display: none;
+}
+
+#inputSearch {
+    padding: 5px 10px;
+    display: block;
+}
+
+#cardOutput {
+    /*border: 1px solid #a94442;*/
+    border-radius: 1px;
+    padding: 10px;
 }
