--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,59 @@
+:root {
+    --bg-color: rgb(235, 235, 235);
+    --text-color: rgb(29, 18, 61);
+}
+
+.darkmode {
+    --bg-color: rgb(29, 18, 61);
+    --text-color: rgb(235, 235, 235);
+}
+
 * {
     margin: 0.5em;
-    /*border: 1px, dotted, blue;*/
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
 #allContentWrapper {
     padding: 0px 50px;
 }
 
+#btnToggleTheme {
+    height: 50px;
+    width: 50px;
+    background-color: var(--text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    border-radius: 50%;
+    padding: 0;
+}
+
+#btnToggleTheme svg {
+    fill: var(--bg-color);
+}
+
+#btnToggleTheme svg:last-child {
+    display: none;
+}
+
+.darkmode #btnToggleTheme svg:first-child {
+    display: none;
+}
+
+.darkmode #btnToggleTheme svg:last-child {
+    display: block;
+}
+
 #inputForm {
-    /*border: 1px solid #a94442;*/
     border-radius: 1px;
     padding: 10px;
 }
@@ -67,7 +110,7 @@ button:hover {
 }
 
 button:active {
-    transform: translate(0.5px, 1px);
+    transform: scale(0.98);
 }
 
 #messageBox {
