--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 }
 
 * {
-    margin: 0.5em;
+    margin: 0px;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -20,7 +20,7 @@ body {
 }
 
 #allContentWrapper {
-    padding: 0px 50px;
+    padding: 3rem 5rem;
 }
 
 #btnToggleTheme {
@@ -55,7 +55,8 @@ body {
 
 #inputForm {
     border-radius: 1px;
-    padding: 10px;
+    padding: 10px 0px;
+    margin: 5px 0px;
 }
 
 #newDeckWrapper {
@@ -99,7 +100,7 @@ body {
 button {
     border: 0.5px solid rgba(0, 0, 0, 0.5);
     padding: 10px;
-    margin: 5px 10px;
+    margin: 5px 0px;
     border-radius: 5px;
     color: #333;
     box-shadow: 1.5px 1.5px 2px rgba(0, 0, 0, 0.5);
@@ -143,6 +144,22 @@ button:active {
 #inputSearch {
     padding: 5px 10px;
     display: block;
+}
+
+#inputSkillName {
+    padding: 5px 5px;
+    display: block;
+}
+
+.skillTreeBtnWrapper {
+    display: flex;
+    margin: 5px 0px;
+    gap: 15px;
+}
+
+#skillTreeElement {
+    padding: 10px 20px;
+    border: 2px, dashed #333;
 }
 
 #cardOutput {
